# lampa

./: LICENSE  LamPaStreamlit copy.py  LamPaStreamlit.py  lampa.xmind  packages.txt  pyproject.toml  requirements.txt
.binder/: .requirements.in.un~  requirements.in  requirements.in~  requirements.txt
accel/: NIS090.AT2
binder/: requirements.txt  runtime.txt
jupyter/: 1. EXAMPLE CHICHI-ΓΙΑ ΚΕΙΜΕΝΟ ΕΡΓΑΣΙΑΣ-με ΛΟΙΠΕΣ ΕΚΤΥΠΩΣΕΙΣ.ipynb  1. EXAMPLE CHICHI.ipynb  1. EXAMPLE kocaeli 11-5.ipynb  11. ATHENS KISHIDA-5%.ipynb  12. ATHENS KISHIDA-20%.ipynb  2. EXAMPLE - KOCAELI.ipynb  3. EXAMPLE - ATHENS ΓΙΑ ΚΕΙΜΕΝΟ ΕΡΓΑΣΙΑΣ ΜΕ ΛΟΙΠΕΣ ΕΚΤΥΠΩΣΕΙΣ.ipynb  4. EXAMPLE CHICHI-ΓΙΑ ΚΕΙΜΕΝΟ ΕΡΓΑΣΙΑΣ-με ΛΟΙΠΕΣ ΕΚΤΥΠΩΣΕΙΣ-ΓΡΑΜΜΙΚΗ ΑΝΑΛΥΣΗ.ipynb  5. KOCAELI LINEAR.ipynb  6. EXAMPLE - ATHENS.ipynb  7. CHICHI KISHIDA 5%.ipynb  7. KISHIDA 50% - CHICHI.ipynb  8. CHICHI KISHIDA 50%.ipynb  8. KISHIDA - KOCAELI 5%.ipynb  8. KISHIDA - KOCAELI 80%.ipynb  9. KISHIDA - ATHENS 80%-80%-80%.ipynb  998 - LampaClasses - EquivalentLinear.ipynb  999 - LampaClasses - LinearElastic.ipynb  999 - LampaClasses.ipynb  ATH49901T2.txt  ChiChi.xlsx  KISHIDA 20-20-20-ATH49901T2.xlsx  Kocaeli.csv  Kocaeli.xlsx  ini.pickle  lampa_elastic_athens 3.json  lampa_elastic_athens.json  lampa_elastic_chichi 2.json  lampa_elastic_chichi 3.json  lampa_elastic_chichi.json  lampa_elastic_kocaeli 3.json  lampa_elastic_kocaeli.json  new_test.json  newjson_schema.json  sample.json  test.ipynb  test_equivalent_linear_from_jupyter_998.json  test_linear_elastic_from_jupyter_999.json
lampa/: input.py  main.py  project.py
(+5 files in other folders)
